2010-02-02  Sancho Lerena <slerena@artica.es>

	* pandora_server/lib/PandoraFMS/Core.pm: Fixed bug #2940411

2009-12-29  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed problem generating events with 
	character ' that makes SQL queries in console to fail.

	* util/plugin/webcheck_plugin.sh: Christmas extra :-). Plugin
	to check WEB content change (by MD5 stamp).

2009-12-28  Sancho Lerena <slerena@artica.es>

	* lib/Config.pm: pandora_exec default at /usr/bin

	* util/pandora_logrotate: Optimized logrotate setup.

	* pandora_server.spec: Start tentacle after install breaks the
	Upgrade process on RPM (error if already running).

	* util/pandora_server: Added mysql as "should-start" in LSB tags

2009-12-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
          lib/PandoraFMS/ReconServer.pm,
          lib/PandoraFMS/DataServer.pm: Use agent provided interval for agent
          auto creation. The default interval was being used instead.

2009-12-23  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed some typos in planned downtime subroutine.

	* bin/pandora_server: Some operations like planned downtime check and
	server down detection are put in a low-priority check, more efficient and
	less time-consuming.

2009-12-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed agent check in logger call.

2009-12-21  Sancho Lerena <slerena@artica.es>

	* util/tentacle_served: Fixed call to get_pid, using a width of 300 cols.

2009-12-21  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Properly read agent_interval
	  configuration token.

2009-12-18  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Added xprobe2 dep (we made the xprobe2 rpm package
	so now it's possible to satisfy dependency). Alter all paths to binary from
	/usr/local/bin to /usr/bin. Other minor issues in RPM fixed.

	* pandora_server_installer: Added description to get deps from zypper and yum.